--- a/frontend/static/themes_admin/css/master.css
+++ b/frontend/static/themes_admin/css/master.css
@@ -22,7 +22,7 @@ body{
     --color-second: rgb(197, 223, 245);
 }
 .purpule{
-    --color-main: #19a713;
+    --color-main: #03BB00;
     --color-second:  #c2dcc066;
 }
 
