--- a/frontend/templates/themes_admin/my_profile.html
+++ b/frontend/templates/themes_admin/my_profile.html
@@ -21,19 +21,19 @@
                             <table class="table">
                                 <tbody>
                                     <tr>
-                                        <td class="text-left">Name: </td>
+                                        <td class="text-left">Nom </td>
                                         <td class="text-right">{{ name }} {{ prenom }}</td>
                                     </tr>
                                     <tr>
-                                        <td class="text-left">Email: </td>
+                                        <td class="text-left">Adresse Email </td>
                                         <td class="text-right">{{ email }}</td>
                                     </tr>
                                     <tr>
-                                        <td class="text-left">Mobile: </td>
+                                        <td class="text-left">Téléphone </td>
                                         <td class="text-right">{{ numero }}</td>
                                     </tr>
                                     <tr>
-                                        <td class="text-left">Address: </td>
+                                        <td class="text-left">Address </td>
                                         <td class="text-right">{{ adresse }}</td>
                                     </tr>
                                 </tbody>
