--- a/frontend/templates/themes_admin/themes_pharmacien/affichage_med.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/affichage_med.html
@@ -19,7 +19,7 @@
             <div class="card">
                 <div class="card-header d-flex justify-content-between bd-highlight mb-3">
                     <div class="p-2 bd-highlight">
-                        Medicine List
+                        Liste de médicaments
                     </div>
                     <div class="p-2 bd-highlight">
                         <a href="{% url 'pharmacien_affichage_med_grid' %}"><button type="button" class="btn btn-list"><i class="	fa fa-th"></i> &nbsp;Grid View</button></a>
