--- a/frontend/static/themes_admin/css/medicine_list.css
+++ b/frontend/static/themes_admin/css/medicine_list.css
@@ -1,174 +1,165 @@
-
-.medicine-list .card{
+.medicine-list .card {
     height: auto;
     margin-bottom: 20px;
     padding-bottom: 40px;
     font-size: 15px;
     box-shadow: 0 1rem 1rem rgb(0 0 0 / 8%);
+    border-radius: 10px; /* Bordures arrondies */
 }
-.medicine-list .card-header{
+
+.medicine-list .card-header {
     font-size: 20px;
-    padding:15px;
-    background-color:white;
+    padding: 15px;
+    background-color: white;
     margin-bottom: 15px;
+    border-bottom: 2px solid var(--color-main);
 }
 
-
-.medicine-list  .btn-list:hover{
-    box-shadow: 0 2px 6px 0  rgb(142 155 156 / 50%);
+.medicine-list .btn-list:hover {
+    box-shadow: 0 2px 6px 0 rgb(142 155 156 / 50%);
+    transition: all 0.3s ease; /* Transition pour les effets de survol */
 }
 
-.medicine-list  .btn-list{
+.medicine-list .btn-list {
     background-color: var(--color-main);
     color: white;
-    border-radius: 2px;
+    border-radius: 5px; /* Bordures arrondies */
     font-size: 15px;
+    padding: 10px 20px;
 }
 
-/* Edit Icone */
-.medicine-list .table .fa-edit{
+.medicine-list .table .fa-edit,
+.medicine-list .table .fa-trash,
+.medicine-list .table .fa-expand-arrows-alt,
+.medicine-list .table .fa-clone {
+    font-size: 18px; /* Augmente la taille des icônes */
+    margin-top: 5px;
+    margin-left: 5px;
+    padding: 8px;
+    border-radius: 5px; /* Bordures arrondies */
+}
+
+.medicine-list .table .fa-edit {
     color: #28a745;
     background-color: #e7ffec;
-    border-radius: 2px;
-    padding: 4px;
-    font-size: 13px;
     border: 1px solid #28a745;
-    margin-top: 5px;
-    margin-left: 12px;
 }
 
-/* Delete Icone */
-.medicine-list .table .fa-trash{
+.medicine-list .table .fa-trash {
     color: #dc3545;
-    background-color: #19a713;
-    border-radius: 2px;
-    padding: 4px;
-    font-size: 13px;
+    background-color: #ffe3e6;
     border: 1px solid #dc3545;
-    margin-top: 5px;
-    margin-left: 5px;
 }
 
-
-/* Show Icone */
-.medicine-list .table .fa-expand-arrows-alt{
+.medicine-list .table .fa-expand-arrows-alt {
     color: rgb(85, 149, 233);
     background-color: #e7efff;
-    border-radius: 2px;
-    padding: 4px;
-    font-size: 13px;
     border: 1px solid rgb(85, 149, 233);
-    margin-top: 5px;
-    margin-left: 5px;
 }
 
-
-/* Batches Icone */
-.medicine-list .table .fa-clone{
+.medicine-list .table .fa-clone {
     color: #ff8e24;
     background-color: #ffeedf;
-    border-radius: 2px;
-    padding: 4px;
-    font-size: 13px;
     border: 1px solid #ff8e24;
-    margin-top: 5px;
-    margin-left: 5px;
 }
 
+.medicine-list .table .fa-clone:hover,
+.medicine-list .table .fa-edit:hover,
+.medicine-list .table .fa-trash:hover,
+.medicine-list .table .fa-expand-arrows-alt:hover {
+    color: white;
+    transition: all 0.3s ease; /* Transition pour les effets de survol */
+}
 
-/* Batches Icone Hover*/
-.medicine-list .table .fa-clone:hover{
-    color:   #ffeedf;
+.medicine-list .table .fa-clone:hover {
     background-color: #ff8e24;
 }
 
-
-/* Edit Icone Hover*/
-.medicine-list .table .fa-edit:hover{
-    color:  #e7ffec;
+.medicine-list .table .fa-edit:hover {
     background-color: #28a745;
 }
 
-/* Delete Icone Hover */
-.medicine-list .table .fa-trash:hover{
-    color: #ffe3e6;
+.medicine-list .table .fa-trash:hover {
     background-color: #dc3545;
 }
 
-/* Show Icone Hover*/
-.medicine-list .table .fa-expand-arrows-alt:hover{
-    color:  #e7efff;
+.medicine-list .table .fa-expand-arrows-alt:hover {
     background-color: rgb(85, 149, 233);
 }
-/* Edit Button Add Customar */
-.medicine-list .card-header button{
+
+.medicine-list .card-header button {
     font-size: 15px;
 }
 
-
-
-
-.medicine-list .card-body .icone-pdf-excel{
+.medicine-list .card-body .icone-pdf-excel {
     background-color: #f0f1f1;
 }
 
-.medicine-list .card-body .icone-pdf-excel i{
+.medicine-list .card-body .icone-pdf-excel i {
     padding: 10px;
     background-color: #f0f1f1;
     margin: 0;
     color: black;
 }
 
-.medicine-list .card-body .icone-pdf-excel i:hover{
-    background-color: #cecece
+.medicine-list .card-body .icone-pdf-excel i:hover {
+    background-color: #cecece;
+    transition: all 0.3s ease; /* Transition pour les effets de survol */
 }
+
 .medicine-list .form-control {
     width: auto;
 }
 
-table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td.dtr-control:before, table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th.dtr-control:before{
+table.dataTable.dtr-inline.collapsed > tbody > tr.parent > td.dtr-control:before,
+table.dataTable.dtr-inline.collapsed > tbody > tr.parent > th.dtr-control:before {
     content: "-";
     background-color: var(--color-main) !important;
 }
 
-table.dataTable.dtr-inline.collapsed>tbody>tr>td.dtr-control:before, table.dataTable.dtr-inline.collapsed>tbody>tr>th.dtr-control:before {
+table.dataTable.dtr-inline.collapsed > tbody > tr > td.dtr-control:before,
+table.dataTable.dtr-inline.collapsed > tbody > tr > th.dtr-control:before {
     background-color: var(--color-main) !important;
 }
 
-.table-bordered>tbody>tr>td, .table-bordered>tbody>tr>th, .table-bordered>tfoot>tr>td, .table-bordered>tfoot>tr>th, .table-bordered>thead>tr>td, .table-bordered>thead>tr>th {
+.table-bordered > tbody > tr > td,
+.table-bordered > tbody > tr > th,
+.table-bordered > tfoot > tr > td,
+.table-bordered > tfoot > tr > th,
+.table-bordered > thead > tr > td,
+.table-bordered > thead > tr > th {
     border: 1px solid rgb(255 255 255 / 15%) !important;
 }
-.table-info, .table-info>td, .table-info>th {
+
+.table-info,
+.table-info > td,
+.table-info > th {
     background-color: #eafcff52;
 }
 
-/* Edit Button Search */
-.dataTables_filter input{
+.dataTables_filter input {
     margin-bottom: 20px;
-    padding-top: 20px; 
-    padding-bottom: 20px;
+    padding: 20px;
     font-size: 14px;
     border: #afafaf solid 1px;
 }
 
-.dataTables_filter input:focus{
+.dataTables_filter input:focus {
     border: var(--color-main) solid 1px;
-    box-shadow: inset 0 1px 1px rgb(0 124 160 / 10%), 0 0 20px rgb(0 124 160/ 10%);
+    box-shadow: inset 0 1px 1px rgb(0 124 160 / 10%), 0 0 20px rgb(0 124 160 / 10%);
 }
 
-
-.dataTables_length select{
+.dataTables_length select {
     font-size: 14px;
     border: #afafaf solid 1px;
-} 
-
-
-.dataTables_length select:focus{
-    border: var(--color-main) solid 1px;
-    box-shadow: inset 0 1px 1px rgb(0 124 160 / 10%), 0 0 20px rgb(0 124 160/ 10%);
 }
 
-select.form-control-sm:not([size]):not([multiple]){
+.dataTables_length select:focus {
+    border: var(--color-main) solid 1px;
+    box-shadow: inset 0 1px 1px rgb(0 124 160 / 10%), 0 0 20px rgb(0 124 160 / 10%);
+}
+
+select.form-control-sm:not([size]):not([multiple]) {
     height: 40px;
 }
 
@@ -179,19 +170,29 @@ select.form-control-sm:not([size]):not([multiple]){
     border-color: var(--color-main);
 }
 
-.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
+.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
     background-color: var(--color-main);
-    border-radius: 2px !important;
+    border-radius: 5px !important; /* Bordures arrondies */
 }
 
-.pagination>li>a, .pagination>li>span {
+.pagination > li > a,
+.pagination > li > span {
     color: var(--color-main);
 }
+
 table.table-bordered.dataTable {
     border-right-width: 1px !important;
 }
-.medicine-list img{
+
+.medicine-list img {
     height: 80px;
-    width: 100px;
+    width: 80px; /* Rendre les images carrées */
+    object-fit: cover; /* Pour que les images s'adaptent bien à la taille définie */
+    border-radius: 5px; /* Bordures arrondies */
 }
 
